--- a/src/css/components/_navigation.css
+++ b/src/css/components/_navigation.css
@@ -17,7 +17,7 @@ nav ul {
     display: flex;
     list-style: none;
     margin: 0;
-    padding-top: 10px;
+    padding: 0;
     gap: 1.5rem;
 }
 
